# termcom

./: CLAUDE.md  Cargo.toml  README.md
.tmp/: design.md  requirements.md  tasks.md
commands/: design.md  requirements.md  spec.md  tasks.md
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md
src/: lib.rs  main.rs
src/cli/: args.rs  commands.rs  mod.rs  output.rs
src/core/: memory.rs  mod.rs
src/core/communication/: engine.rs  message.rs  mod.rs  transport.rs
src/core/config/: mod.rs
src/core/session/: manager.rs  mod.rs  session.rs  state.rs
src/domain/: config.rs  error.rs  mod.rs
src/infrastructure/: config.rs  mod.rs
src/infrastructure/logging/: mod.rs
src/infrastructure/serial/: client.rs  manager.rs  mod.rs
src/infrastructure/tcp/: client.rs  manager.rs  mod.rs  server.rs
src/tui/: app.rs  event.rs  input.rs  mod.rs  state.rs  ui.rs
src/tui/widgets/: chat.rs  connect.rs  help.rs  main.rs  mod.rs  sessions.rs  status.rs
tests/: benchmarks.rs  cli_tests.rs  error_handling_tests.rs  integration_tests.rs  performance_tests.rs  test_suite_report.md
