[package]
name = "termcom"
version = "0.1.0"
edition = "2021"
authors = ["TermCom Development Team"]
description = "Embedded device communication debug tool with serial and TCP support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/termcom"
keywords = ["embedded", "serial", "tcp", "debug", "communication"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# CLI framework
clap = { version = "4.0", features = ["derive"] }

# TUI framework  
ratatui = "0.24"
crossterm = "0.27"

# Serial communication
serialport = "4.2"

# Configuration management
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = { version = "1.0", optional = true }

[dev-dependencies]
proptest = "1.0"
tokio-test = "0.4"
tempfile = "3.8"

[features]
default = []
property-testing = ["proptest"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
